--- a/contacto.html
+++ b/contacto.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<>>, initial-scale=1.0">
-    <title></title>
+    <title>Contacto</title>
 </head>
 <body>
     <h1>Correo: </h1>
+    <p>
+        Maite Diaz
+    </p>
 </body>
 </html>
